@@ -2,6 +2,14 @@
 # $Id$ 
 #
 
+2004-07-20(Tue) 04:06:17 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* ndk_client.rb : use NdkCommandDescription to list
+	items
+
+	* ndk_config.rb(identical_channel_name) : add euc-jp option to regexp
+
+
 2004-07-20(Tue) 02:23:35 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* plugins/sixamo.nb : change talk ratio algorithm
